--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "npx live-server . --port=3000 --open=./index.html",
     "dev": "npx live-server . --port=3000",
-    "build": "echo 'Build complete'",
+    "build": "npm run minify:css && npm run minify:js && echo 'Build complete!'",
+    "minify:css": "echo 'CSS minification: Install clean-css-cli for production builds'",
+    "minify:js": "echo 'JS minification: Install terser for production builds'",
     "optimize:images": "npx imagemin assets/img --out-dir=assets/img"
   },
   "keywords": [
